<resources>

    <string name="app_name">Praveen Kumar</string>
    <string name="notificationHeading">Select type of notification</string>
    <string name="serviceHeading">Service option</string>
    <string name="persistentSwitch">Persistent</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Praveen Kumar</string>
    <string name="smallNotificationButton">Small</string>
    <string name="bigNotificationButton">Big</string>
    <string name="pictureNotificationButton">Picture</string>
    <string name="messageInboxNotificationButton">Message</string>
    <string name="startServiceButton">start</string>
    <string name="stopServiceButton">stop</string>
    <string name="HandleNotification">Notification handling activity</string>
    <string name="devImageDescription">Developer of this small app :)</string>

</resources>